--- a/app/src/main/res/layout/item_legalities.xml
+++ b/app/src/main/res/layout/item_legalities.xml
@@ -2,4 +2,4 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:textAppearance="?attr/textAppearanceHeadline5"></TextView>
+	android:textAppearance="?attr/textAppearanceHeadline5" />
