implementing birthdate request and legalities acception

--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -65,6 +65,41 @@
 			android:inputType="textPassword" />
 	</com.google.android.material.textfield.TextInputLayout>
 
+	<TextView
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="I was born on:" />
+
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal">
+
+		<androidx.appcompat.widget.AppCompatSpinner
+			android:id="@+id/birthdate_day"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:spinnerMode="dialog">
+
+		</androidx.appcompat.widget.AppCompatSpinner>
+
+		<androidx.appcompat.widget.AppCompatSpinner
+			android:id="@+id/birthdate_month"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:spinnerMode="dialog">
+
+		</androidx.appcompat.widget.AppCompatSpinner>
+
+		<androidx.appcompat.widget.AppCompatSpinner
+			android:id="@+id/birthdate_year"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:spinnerMode="dialog">
+
+		</androidx.appcompat.widget.AppCompatSpinner>
+	</LinearLayout>
+
 	<com.google.android.material.button.MaterialButton
 		android:id="@+id/sign_up_sign_up_button"
 		style="@style/Widget.HappyApp.ContainedButton"
