populated years spinner by iterating through the years from now to 1903

--- a/app/src/main/res/layout/birthdate_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/birthdate_spinner_dropdown_item.xml
@@ -4,4 +4,5 @@
 	android:layout_height="wrap_content"
 	android:gravity="start"
 	android:padding="4dp"
+	android:paddingStart="13dp"
 	android:textAppearance="?attr/textAppearanceHeadline5" />
