--- a/app/src/main/res/layout/legalities_dialog_view.xml
+++ b/app/src/main/res/layout/legalities_dialog_view.xml
@@ -8,10 +8,11 @@
 	android:padding="@dimen/fragment_padding_large">
 
 	<ListView
-		android:id="@+id/privacy_policy_list_view"
+		android:id="@+id/legalities_list_view"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="8dp"
+		android:clickable="false"
 		android:layout_marginBottom="8dp"
 		app:layout_constraintBottom_toTopOf="@+id/privacy_policy_dialog_accept_button"
 		app:layout_constraintTop_toTopOf="parent"
@@ -55,15 +56,22 @@
 		android:layout_marginEnd="8dp"
 		android:text="accept"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/privacy_policy_list_view" />
+		app:layout_constraintTop_toBottomOf="@+id/legalities_list_view" />
 
-	<ProgressBar
-		android:id="@+id/progressBar"
+	<ImageView
+		android:id="@+id/privacy_policy_image_view_waiting_assistant"
+		android:layout_width="70.13dp"
+		android:layout_height="70.13dp"
+		android:layout_marginTop="13dp"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent" />
+
+	<TextView
+		android:id="@+id/privacy_policy_text_view_waiting_assistant_text"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="16dp"
-		android:progressDrawable="@drawable/ic_app_logo"
-		app:layout_constraintTop_toTopOf="parent"
-		tools:layout_editor_absoluteX="8dp" />
-
+		android:gravity="center"
+		android:text="Loading content..."
+		app:layout_constraintTop_toBottomOf="@+id/privacy_policy_image_view_waiting_assistant" />
 </androidx.constraintlayout.widget.ConstraintLayout>
