--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,10 +8,10 @@
 	android:padding="@dimen/fragment_padding_medium"
 	tools:context=".LoginActivity">
 
-	<ProgressBar
+	<ImageView
 		android:id="@+id/progress_bar"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="@dimen/waiting_assistant_size"
+		android:layout_height="@dimen/waiting_assistant_size"
 		android:layout_marginTop="8dp"
 		android:layout_marginBottom="8dp"
 		android:visibility="invisible"
