--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,18 +1,19 @@
 <resources>
 	<!-- Default screen margins, per the Android Design guidelines. -->
-	<dimen name="activity_horizontal_margin">16dp</dimen>
-	<dimen name="activity_vertical_margin">16dp</dimen>
+	<dimen name="activity_horizontal_margin">16.13dp</dimen>
+	<dimen name="activity_vertical_margin">16.13dp</dimen>
 
 	<!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
 		 https://developer.android.com/design/patterns/navigation-drawer.html -->
-	<dimen name="navigation_drawer_width">240dp</dimen>
-	<dimen name="nav_header_vertical_spacing">8dp</dimen>
-	<dimen name="nav_header_height">176dp</dimen>
-	<dimen name="fab_margin">16dp</dimen>
-	<dimen name="profile_picture_size">100dp</dimen>
+	<dimen name="navigation_drawer_width">240.13dp</dimen>
+	<dimen name="nav_header_vertical_spacing">8.13dp</dimen>
+	<dimen name="nav_header_height">176.13dp</dimen>
+	<dimen name="fab_margin">16.13dp</dimen>
+	<dimen name="profile_picture_size">100.13dp</dimen>
+	<dimen name="waiting_assistant_size">80.13dp</dimen>
 
 	<!-- Standardized Fragment paddings -->
-	<dimen name="fragment_padding_small">2dp</dimen>
-	<dimen name="fragment_padding_medium">4dp</dimen>
-	<dimen name="fragment_padding_large">8dp</dimen>
+	<dimen name="fragment_padding_small">2.13dp</dimen>
+	<dimen name="fragment_padding_medium">4.13dp</dimen>
+	<dimen name="fragment_padding_large">8.13dp</dimen>
 </resources>
