--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".OnboardingActivity">
+	android:orientation="vertical"
+	tools:context=".OnboardingFragment">
 
-	<!-- TODO: Update blank fragment layout -->
-	<TextView
+	<androidx.viewpager.widget.ViewPager
+		android:id="@+id/onboarding_slide_view_pager"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:text="@string/hello_blank_fragment" />
+		android:layout_height="wrap_content"
+		app:layout_constraintBottom_toTopOf="@+id/onboarding_page_indicator_layout"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent">
 
-</FrameLayout>
+	</androidx.viewpager.widget.ViewPager>
+
+	<LinearLayout
+		android:id="@+id/onboarding_page_indicator_layout"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/onboarding_slide_view_pager">
+
+	</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
