--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
 	<color name="textColorBlack">#000</color>
 	<color name="textColorWhite">#fff</color>
 	<color name="fragmentBackgroundColor">#fff</color>
+
+	<color name="black_overlay">#66000000</color>
 </resources>
