--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,10 +9,7 @@
 		<item name="android:fontFamily">@font/font</item>
 	</style>
 
-	<style name="Theme.HappyApp.NoActionBar" parent="Theme.MaterialComponents.Light.NoActionBar">
-		<item name="windowActionBar">false</item>
-		<item name="windowNoTitle">true</item>
-	</style>
+	<style name="Theme.HappyApp.NoActionBar" parent="Theme.MaterialComponents.Light.NoActionBar" />
 
 	<style name="Theme.HappyApp.Launcher">
 		<item name="android:windowBackground">@drawable/launch_screen</item>
@@ -69,6 +66,18 @@
 		<item name="android:orientation">vertical</item>
 		<item name="android:layout_marginTop">4dp</item>
 		<item name="android:layout_marginBottom">4dp</item>
+	</style>
+
+	<style name="FullscreenTheme" parent="Theme.HappyApp">
+		<item name="android:actionBarStyle">@style/FullscreenActionBarStyle</item>
+		<item name="android:windowActionBarOverlay">true</item>
+		<item name="android:windowBackground">@null</item>
+		<item name="metaButtonBarStyle">?android:attr/buttonBarStyle</item>
+		<item name="metaButtonBarButtonStyle">?android:attr/buttonBarButtonStyle</item>
+	</style>
+
+	<style name="FullscreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
+		<item name="android:background">#000666</item>
 	</style>
 
 </resources>
