added a new activity with a container for fragments. in the fragment i added a viewpager2 with horizontal swiping that will show the account level subscriptions you can buy and a free 30 day trial.

--- a/app/src/main/res/layout/fragment_account_level.xml
+++ b/app/src/main/res/layout/fragment_account_level.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".OnboardingActivity">
+	tools:context=".AccountLevelFragment">
 
-	<FrameLayout
-		android:id="@+id/onboarding_fragment_container"
+	<androidx.viewpager2.widget.ViewPager2
+		android:id="@+id/account_level_variants_holder"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent" />
+		android:layout_height="match_parent"
+		app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
