--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,7 +2,7 @@
 	android:shape="rectangle">
 	<gradient
 		android:angle="135"
-		android:endColor="@color/colorPrimary"
-		android:startColor="@color/colorAccent"
+		android:endColor="@color/color_primary"
+		android:startColor="@color/color_accent"
 		android:type="linear" />
 </shape>
