--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -21,7 +21,7 @@
 	<View
 		android:layout_width="match_parent"
 		android:layout_height="0.7dp"
-		android:background="@color/textColorBlack" />
+		android:background="@color/black" />
 
 	<!--<LinearLayout-->
 	<!--android:layout_width="match_parent"-->
