--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,6 @@
 	<dimen name="fragment_padding_small">2.13dp</dimen>
 	<dimen name="fragment_padding_medium">4.13dp</dimen>
 	<dimen name="fragment_padding_large">8.13dp</dimen>
+	<dimen name="appbar_padding">16dp</dimen>
+	<dimen name="appbar_padding_top">8dp</dimen>
 </resources>
