--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
 	<!-- Base application theme. -->
 	<style name="Theme.HappyApp" parent="Theme.MaterialComponents.Light.NoActionBar">
 		<!-- Customize your theme here. -->
-		<item name="colorPrimary">@color/colorPrimary</item>
-		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-		<item name="colorAccent">@color/colorAccent</item>
+		<item name="colorPrimary">@color/color_primary</item>
+		<item name="colorPrimaryDark">@color/color_primary_dark</item>
+		<item name="colorAccent">@color/color_accent</item>
 		<item name="android:fontFamily">@font/font</item>
 	</style>
 
@@ -24,35 +24,35 @@
 
 	<style name="Widget.HappyApp.ContainedButton" parent="Widget.MaterialComponents.Button">
 		<item name="cornerRadius">4dp</item>
-		<item name="backgroundTint">@color/colorPrimary</item>
-		<item name="rippleColor">@color/rippleColor</item>
+		<item name="backgroundTint">@color/color_primary</item>
+		<item name="rippleColor">@color/ripple_color</item>
 		<item name="android:layout_margin">13dp</item>
 		<item name="android:textSize">13sp</item>
 		<item name="android:elevation">13dp</item>
-		<item name="android:textColor">@color/textColorWhite</item>
+		<item name="android:textColor">@color/white</item>
 		<item name="android:textAllCaps">true</item>
 	</style>
 
 	<style name="Widget.HappyApp.TextButton" parent="Widget.MaterialComponents.Button.TextButton">
 		<item name="cornerRadius">4dp</item>
-		<item name="rippleColor">@color/colorPrimary</item>
+		<item name="rippleColor">@color/color_primary</item>
 		<item name="android:layout_margin">13dp</item>
 		<item name="android:textSize">13sp</item>
-		<item name="android:textColor">@color/rippleColor</item>
+		<item name="android:textColor">@color/ripple_color</item>
 		<item name="android:textAllCaps">true</item>
 	</style>
 
 	<style name="Widget.HappyApp.OutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
 		<item name="cornerRadius">4dp</item>
-		<item name="rippleColor">@color/colorPrimary</item>
+		<item name="rippleColor">@color/color_primary</item>
 		<item name="android:textSize">13sp</item>
 		<item name="android:layout_margin">13dp</item>
 		<item name="android:textAllCaps">true</item>
-		<item name="android:textColor">@color/rippleColor</item>
+		<item name="android:textColor">@color/ripple_color</item>
 	</style>
 
 	<style name="Theme.HappyApp.Fragment">
-		<item name="android:background">@color/fragmentBackgroundColor</item>
+		<item name="android:background">@color/fragment_background_color</item>
 		<item name="android:elevation">4dp</item>
 	</style>
 
@@ -68,16 +68,22 @@
 		<item name="android:layout_marginBottom">4dp</item>
 	</style>
 
-	<style name="FullscreenTheme" parent="Theme.HappyApp">
-		<item name="android:actionBarStyle">@style/FullscreenActionBarStyle</item>
-		<item name="android:windowActionBarOverlay">true</item>
-		<item name="android:windowBackground">@null</item>
-		<item name="metaButtonBarStyle">?android:attr/buttonBarStyle</item>
-		<item name="metaButtonBarButtonStyle">?android:attr/buttonBarButtonStyle</item>
+
+	<!-- Base application theme. -->
+	<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+		<!-- Customize your theme here. -->
+		<item name="colorPrimary">@color/color_primary</item>
+		<item name="colorPrimaryDark">@color/color_primary_dark</item>
+		<item name="colorAccent">@color/color_accent</item>
 	</style>
 
-	<style name="FullscreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
-		<item name="android:background">#000666</item>
+	<style name="AppTheme.NoActionBar">
+		<item name="windowActionBar">false</item>
+		<item name="windowNoTitle">true</item>
 	</style>
+
+	<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+	<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
