--- a/app/src/main/res/layout/item_viewpager.xml
+++ b/app/src/main/res/layout/item_viewpager.xml
@@ -5,8 +5,16 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
+	<androidx.appcompat.widget.AppCompatImageView
+		android:layout_width="@dimen/image_view_app_logo_size"
+		android:layout_height="@dimen/image_view_app_logo_size"
+		android:src="@drawable/ic_app_logo"
+		app:layout_constraintBottom_toTopOf="@id/view_pager_tv_title"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 	<androidx.appcompat.widget.AppCompatTextView
-		android:id="@+id/tvTitle"
+		android:id="@+id/view_pager_tv_title"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:gravity="center"
@@ -14,12 +22,32 @@
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintTop_toTopOf="parent" />
 
-	<androidx.appcompat.widget.AppCompatButton
-		android:id="@+id/btnToggle"
-		android:layout_width="wrap_content"
+	<androidx.appcompat.widget.AppCompatTextView
+		android:id="@+id/view_pager_tv_description"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:text="toggle"
-		app:layout_constraintBottom_toBottomOf="parent"
+		android:gravity="center"
+		android:textAppearance="?attr/textAppearanceSubtitle2"
+		app:layout_constraintBottom_toBottomOf="@+id/view_pager_tv_price"
+		app:layout_constraintTop_toBottomOf="@+id/view_pager_tv_title" />
+
+	<androidx.appcompat.widget.AppCompatTextView
+		android:id="@+id/view_pager_tv_price"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:gravity="center"
+		android:textAppearance="?attr/textAppearanceSubtitle1"
+		app:layout_constraintBottom_toTopOf="@+id/view_pager_bt_confirm"
+		app:layout_constraintTop_toBottomOf="@+id/view_pager_tv_description" />
+
+	<com.google.android.material.button.MaterialButton
+		android:id="@+id/view_pager_bt_confirm"
+		style="@style/Widget.HappyApp.ContainedButton"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent" />
+		android:text="I take this"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/view_pager_tv_price" />
 </androidx.constraintlayout.widget.ConstraintLayout>
