--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,11 +11,13 @@
 	<dimen name="fab_margin">16.13dp</dimen>
 	<dimen name="profile_picture_size">100.13dp</dimen>
 	<dimen name="waiting_assistant_size">80.13dp</dimen>
+	<dimen name="image_view_app_logo_size">200.13dp</dimen>
 
 	<!-- Standardized Fragment paddings -->
 	<dimen name="fragment_padding_small">2.13dp</dimen>
 	<dimen name="fragment_padding_medium">4.13dp</dimen>
 	<dimen name="fragment_padding_large">8.13dp</dimen>
-	<dimen name="appbar_padding">16dp</dimen>
-	<dimen name="appbar_padding_top">8dp</dimen>
+	<dimen name="appbar_padding">16.13dp</dimen>
+	<dimen name="appbar_padding_top">8.13dp</dimen>
+	<dimen name="button_margin_all">13dp</dimen>
 </resources>
