--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,7 +26,7 @@
 		<item name="cornerRadius">4dp</item>
 		<item name="backgroundTint">@color/color_primary</item>
 		<item name="rippleColor">@color/ripple_color</item>
-		<item name="android:layout_margin">13dp</item>
+		<item name="android:layout_margin">@dimen/button_margin_all</item>
 		<item name="android:textSize">13sp</item>
 		<item name="android:elevation">13dp</item>
 		<item name="android:textColor">@color/white</item>
