--- a/app/src/main/res/layout/item_viewpager.xml
+++ b/app/src/main/res/layout/item_viewpager.xml
@@ -43,7 +43,7 @@
 
 	<com.google.android.material.button.MaterialButton
 		android:id="@+id/view_pager_bt_confirm"
-		style="@style/Widget.HappyApp.ContainedButton"
+		style="@style/Theme.HappyApp.ContainedButton"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:text="I take this"
