--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,39 +15,46 @@
 		<item name="android:windowBackground">@drawable/launch_screen</item>
 	</style>
 
+	<style name="Widget.HappyApp.Spinner" parent="Widget.AppCompat.Spinner">
+		<item name="android:elevation">13dp</item>
+		<item name="android:background">@drawable/box</item>
+	</style>
+
 	<style name="Widget.HappyApp.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 		<!--<item name="android:paddingBottom">6dp</item>-->
 		<item name="android:layout_margin">13dp</item>
-		<item name="boxCornerRadiusBottomEnd">1.3dp</item>
-		<item name="boxCornerRadiusTopStart">1.3dp</item>
+		<item name="boxCornerRadiusBottomEnd">25.13dp</item>
+		<item name="boxCornerRadiusBottomStart">25.13dp</item>
+		<item name="boxCornerRadiusTopStart">25.13dp</item>
+		<item name="boxCornerRadiusTopEnd">25.13dp</item>
 	</style>
 
-	<style name="Widget.HappyApp.ContainedButton" parent="Widget.MaterialComponents.Button">
-		<item name="cornerRadius">4dp</item>
+	<style name="Theme.HappyApp.ContainedButton" parent="Widget.MaterialComponents.Button">
+		<item name="cornerRadius">25.13dp</item>
 		<item name="backgroundTint">@color/color_primary</item>
-		<item name="rippleColor">@color/ripple_color</item>
+		<item name="rippleColor">@color/white</item>
 		<item name="android:layout_margin">@dimen/button_margin_all</item>
 		<item name="android:textSize">13sp</item>
 		<item name="android:elevation">13dp</item>
 		<item name="android:textColor">@color/white</item>
-		<item name="android:textAllCaps">true</item>
+		<item name="android:textAllCaps">false</item>
 	</style>
 
 	<style name="Widget.HappyApp.TextButton" parent="Widget.MaterialComponents.Button.TextButton">
-		<item name="cornerRadius">4dp</item>
+		<item name="cornerRadius">30dp</item>
 		<item name="rippleColor">@color/color_primary</item>
 		<item name="android:layout_margin">13dp</item>
 		<item name="android:textSize">13sp</item>
 		<item name="android:textColor">@color/ripple_color</item>
-		<item name="android:textAllCaps">true</item>
+		<item name="android:textAllCaps">false</item>
 	</style>
 
 	<style name="Widget.HappyApp.OutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
-		<item name="cornerRadius">4dp</item>
+		<item name="cornerRadius">30dp</item>
 		<item name="rippleColor">@color/color_primary</item>
 		<item name="android:textSize">13sp</item>
 		<item name="android:layout_margin">13dp</item>
-		<item name="android:textAllCaps">true</item>
+		<item name="android:textAllCaps">false</item>
 		<item name="android:textColor">@color/ripple_color</item>
 	</style>
 
@@ -61,7 +68,7 @@
 	<style name="Theme.HappyApp.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light" />
 
 	<style name="Theme.HappyApp.LinearLayoutBox">
-		<item name="android:padding">8dp</item>
+		<item name="android:padding">0dp</item>
 		<item name="android:background">@drawable/box</item>
 		<item name="android:orientation">vertical</item>
 		<item name="android:layout_marginTop">4dp</item>
