--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,8 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/legal_container"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	android:padding="@dimen/fragment_padding_large">
+	android:layout_height="wrap_content">
 
 	<ScrollView
 		android:id="@+id/scroll_view"
@@ -18,8 +17,8 @@
 
 			<ImageView
 				android:id="@+id/logo"
-				android:layout_width="200dp"
-				android:layout_height="200dp"
+				android:layout_width="@dimen/image_view_app_logo_size"
+				android:layout_height="@dimen/image_view_app_logo_size"
 				android:layout_gravity="center"
 				android:layout_marginTop="30dp"
 				android:layout_marginBottom="50dp"
