more exception handling

--- a/app/src/main/res/layout/fragment_email_verification.xml
+++ b/app/src/main/res/layout/fragment_email_verification.xml
@@ -65,7 +65,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="@dimen/nav_header_vertical_spacing"
-			android:text="Send email again"
+			android:text="Send Email again"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toEndOf="@id/emailverification_back_button"
@@ -78,7 +78,7 @@
 			android:layout_height="wrap_content"
 			android:layout_marginTop="@dimen/nav_header_vertical_spacing"
 			android:layout_marginEnd="8dp"
-			android:text="Back"
+			android:text="back"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toStartOf="@+id/emailverification_send_again_button"
 			app:layout_constraintStart_toStartOf="parent"
