--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -62,6 +62,7 @@
 		<com.google.android.material.textfield.TextInputLayout
 			style="@style/Widget.HappyApp.TextInputLayout"
 			android:layout_width="match_parent"
+			app:passwordToggleEnabled="true"
 			android:layout_height="wrap_content">
 
 			<com.google.android.material.textfield.TextInputEditText
