--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/sign_up_fragment"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
@@ -55,6 +56,7 @@
 	<com.google.android.material.textfield.TextInputLayout
 		style="@style/Widget.HappyApp.TextInputLayout"
 		android:layout_width="match_parent"
+		app:passwordToggleEnabled="true"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="4dp"
 		android:layout_marginBottom="4dp">
