--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,8 @@
 		<item name="android:layout_margin">13dp</item>
 		<item name="boxCornerRadiusBottomEnd">.13dp</item>
 		<item name="boxCornerRadiusTopStart">.13dp</item>
+		<item name="boxCornerRadiusBottomStart">10.13dp</item>
+		<item name="boxCornerRadiusTopEnd">10.13dp</item>
 	</style>
 
 	<style name="Theme.HappyApp.ContainedButton" parent="Widget.MaterialComponents.Button">
@@ -32,25 +34,25 @@
 		<item name="backgroundTint">@color/color_primary</item>
 		<item name="rippleColor">@color/white</item>
 		<item name="android:layout_margin">@dimen/button_margin_all</item>
-		<item name="android:textSize">13sp</item>
+		<item name="android:textSize">15.13sp</item>
 		<item name="android:elevation">13dp</item>
 		<item name="android:textColor">@color/white</item>
 		<item name="android:textAllCaps">false</item>
 	</style>
 
 	<style name="Widget.HappyApp.TextButton" parent="Widget.MaterialComponents.Button.TextButton">
-		<item name="cornerRadius">30dp</item>
+		<item name="cornerRadius">25.13dp</item>
 		<item name="rippleColor">@color/color_primary</item>
 		<item name="android:layout_margin">13dp</item>
-		<item name="android:textSize">13sp</item>
+		<item name="android:textSize">15.13sp</item>
 		<item name="android:textColor">@color/ripple_color</item>
 		<item name="android:textAllCaps">false</item>
 	</style>
 
 	<style name="Widget.HappyApp.OutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
-		<item name="cornerRadius">30dp</item>
+		<item name="cornerRadius">25.13dp</item>
 		<item name="rippleColor">@color/color_primary</item>
-		<item name="android:textSize">13sp</item>
+		<item name="android:textSize">15.13sp</item>
 		<item name="android:layout_margin">13dp</item>
 		<item name="android:textAllCaps">false</item>
 		<item name="android:textColor">@color/ripple_color</item>
