--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -47,6 +47,8 @@
 		<com.google.android.material.textfield.TextInputLayout
 			style="@style/Widget.HappyApp.TextInputLayout"
 			android:layout_width="match_parent"
+			android:id="@+id/login_email_field_layout"
+			app:errorEnabled="true"
 			android:layout_height="wrap_content">
 
 			<com.google.android.material.textfield.TextInputEditText
@@ -63,6 +65,8 @@
 			style="@style/Widget.HappyApp.TextInputLayout"
 			android:layout_width="match_parent"
 			app:passwordToggleEnabled="true"
+			android:id="@+id/login_password_field_layout"
+			app:errorEnabled="true"
 			android:layout_height="wrap_content">
 
 			<com.google.android.material.textfield.TextInputEditText
