--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,8 @@
 	<dimen name="profile_picture_size">100.13dp</dimen>
 	<dimen name="waiting_assistant_size">80.13dp</dimen>
 	<dimen name="image_view_app_logo_size">200.13dp</dimen>
+	<dimen name="button_text_size">17.13sp</dimen>
+	<dimen name="button_margin_start_end">30.13dp</dimen>
 
 	<!-- Standardized Fragment paddings -->
 	<dimen name="fragment_padding_small">2.13dp</dimen>
