--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,9 +32,9 @@
 	<style name="Theme.HappyApp.ContainedButton" parent="Widget.MaterialComponents.Button">
 		<item name="cornerRadius">25.13dp</item>
 		<item name="backgroundTint">@color/color_primary</item>
-		<item name="rippleColor">@color/white</item>
+		<item name="rippleColor">@color/color_primary_dark</item>
 		<item name="android:layout_margin">@dimen/button_margin_all</item>
-		<item name="android:textSize">15.13sp</item>
+		<item name="android:textSize">@dimen/button_text_size</item>
 		<item name="android:elevation">13dp</item>
 		<item name="android:textColor">@color/white</item>
 		<item name="android:textAllCaps">false</item>
@@ -44,7 +44,7 @@
 		<item name="cornerRadius">25.13dp</item>
 		<item name="rippleColor">@color/color_primary</item>
 		<item name="android:layout_margin">13dp</item>
-		<item name="android:textSize">15.13sp</item>
+		<item name="android:textSize">@dimen/button_text_size</item>
 		<item name="android:textColor">@color/ripple_color</item>
 		<item name="android:textAllCaps">false</item>
 	</style>
@@ -52,7 +52,7 @@
 	<style name="Widget.HappyApp.OutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
 		<item name="cornerRadius">25.13dp</item>
 		<item name="rippleColor">@color/color_primary</item>
-		<item name="android:textSize">15.13sp</item>
+		<item name="android:textSize">@dimen/button_text_size</item>
 		<item name="android:layout_margin">13dp</item>
 		<item name="android:textAllCaps">false</item>
 		<item name="android:textColor">@color/ripple_color</item>
