--- a/app/src/main/res/drawable/launch_screen.xml
+++ b/app/src/main/res/drawable/launch_screen.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-	android:opacity="opaque">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<!-- The Background color. Usually the same as your main theme. -->
 	<item android:drawable="@color/fragment_background_color" />
 
-	<!-- My product logo -->
-	<item>
-		<bitmap
-			android:gravity="center"
-			android:src="@drawable/ic_app_logo" />
+	<!-- My product entry_activity_app_logo -->
+	<item
+		android:width="@dimen/image_view_app_logo_size"
+		android:height="@dimen/image_view_app_logo_size">
+		<bitmap android:src="@drawable/ic_app_logo" />
 	</item>
 </layer-list>
