--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,7 +6,7 @@
 	android:layout_height="wrap_content"
 	android:gravity="center_horizontal"
 	android:padding="@dimen/fragment_padding_medium"
-	tools:context=".LoginActivity">
+	tools:context=".EntryActivity">
 
 	<ImageView
 		android:id="@+id/progress_bar"
@@ -86,7 +86,7 @@
 
 	<com.google.android.material.button.MaterialButton
 		android:id="@+id/login_login_button"
-		style="@style/Theme.HappyApp.ContainedButton"
+		style="@style/Widget.HappyApp.ContainedButton"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/sign_me_in"
@@ -117,7 +117,7 @@
 
 		<com.google.android.material.button.MaterialButton
 			android:id="@+id/login_google_button"
-			style="@style/Theme.HappyApp.ContainedButton"
+			style="@style/Widget.HappyApp.ContainedButton"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginStart="@dimen/button_margin_start_end"
@@ -148,7 +148,7 @@
 
 		<com.google.android.material.button.MaterialButton
 			android:id="@+id/login_sign_up_button"
-			style="@style/Theme.HappyApp.ContainedButton"
+			style="@style/Widget.HappyApp.ContainedButton"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginStart="@dimen/button_margin_start_end"
