--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -117,7 +117,7 @@
 
 	<com.google.android.material.button.MaterialButton
 		android:id="@+id/sign_up_sign_up_button"
-		style="@style/Theme.HappyApp.ContainedButton"
+		style="@style/Widget.HappyApp.ContainedButton"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/sign_up_now" />
