--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,20 @@
 		<item name="android:background">@drawable/box</item>
 	</style>
 
+	<style name="Widget.HappyApp.Seperator.View">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">1.13dp</item>
+		<item name="android:background">@color/black</item>
+	</style>
+
+	<style name="Widget.HappyApp.Seperator.TextView" parent="Widget.AppCompat.TextView">
+		<item name="android:textAlignment">center</item>
+		<item name="android:layout_marginTop">.13dp</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:textAppearance">?attr/textAppearanceSubtitle1</item>
+	</style>
+
 	<style name="Widget.HappyApp.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 		<!--<item name="android:paddingBottom">6dp</item>-->
 		<item name="android:layout_margin">13dp</item>
@@ -29,7 +43,7 @@
 		<item name="boxCornerRadiusTopEnd">10.13dp</item>
 	</style>
 
-	<style name="Theme.HappyApp.ContainedButton" parent="Widget.MaterialComponents.Button">
+	<style name="Widget.HappyApp.ContainedButton" parent="Widget.MaterialComponents.Button">
 		<item name="cornerRadius">25.13dp</item>
 		<item name="backgroundTint">@color/color_primary</item>
 		<item name="rippleColor">@color/color_primary_dark</item>
@@ -55,6 +69,8 @@
 		<item name="android:textSize">@dimen/button_text_size</item>
 		<item name="android:layout_margin">13dp</item>
 		<item name="android:textAllCaps">false</item>
+		<item name="strokeWidth">1.13dp</item>
+		<item name="strokeColor">@color/color_primary</item>
 		<item name="android:textColor">@color/ripple_color</item>
 	</style>
 
@@ -92,5 +108,11 @@
 	<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
 	<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+	<style name="Widget.HappyApp.Seperator" />
+
+	<style name="Widget.HappyApp" />
+
+	<style name="Widget" />
 
 </resources>
