continued fucking refactoring the whole fucking app fuck yeaa

--- a/app/src/main/res/layout/fragment_my_account.xml
+++ b/app/src/main/res/layout/fragment_my_account.xml
@@ -23,6 +23,7 @@
 			android:layout_column="0"
 			android:layout_columnWeight="1"
 			android:layout_gravity="center"
+			android:contentDescription="TODO"
 			android:src="@mipmap/ic_launcher" />
 
 		<TextView
