--- a/app/src/main/res/layout/legalities_dialog_view.xml
+++ b/app/src/main/res/layout/legalities_dialog_view.xml
@@ -39,6 +39,7 @@
 		android:layout_marginTop="13dp"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
+		android:contentDescription="TODO"
 		app:layout_constraintTop_toTopOf="parent" />
 
 	<TextView
