--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
 	<dimen name="image_view_app_logo_size">200.13dp</dimen>
 	<dimen name="button_text_size">17.13sp</dimen>
 	<dimen name="button_margin_start_end">30.13dp</dimen>
+	<dimen name="text_input_layout_corner_radius">10.13dp</dimen>
 
 	<!-- Standardized Fragment paddings -->
 	<dimen name="fragment_padding_small">2.13dp</dimen>
