updated to version with only one subscription

--- a/app/src/main/res/layout/activity_entry.xml
+++ b/app/src/main/res/layout/activity_entry.xml
@@ -300,17 +300,79 @@
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_marginBottom="8.13dp"
-				android:text="@string/plain_choose_a_subscription"
+				android:text="@string/plain_subscribe"
 				android:textAlignment="center"
 				android:textAppearance="?attr/textAppearanceHeadline5"
-				app:layout_constraintBottom_toTopOf="@+id/entry_activity_subscription_view_pager"
+				app:layout_constraintBottom_toTopOf="@+id/entry_activity_subscription_logo"
 				app:layout_constraintTop_toBottomOf="@+id/entry_activity_registration_confirm_tc_privacy_policy_checkbox" />
+
+			<ImageView
+				android:id="@+id/entry_activity_subscription_logo"
+				android:layout_width="200.13dp"
+				android:layout_height="200.13dp"
+				android:contentDescription="@string/plain_happyapp_gold_subscription_logo"
+				android:src="@drawable/ic_app_logo"
+				app:layout_constraintBottom_toTopOf="@+id/entry_activity_subscription_title"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@+id/entry_activity_subscription_view_pager_caption" />
+
+			<TextView
+				android:id="@+id/entry_activity_subscription_title"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:text="@string/plain_happyapp_gold"
+				android:textAlignment="center"
+				android:textAppearance="?attr/textAppearanceHeadline5"
+				app:layout_constraintBottom_toTopOf="@+id/entry_activity_subscription_description_point_1"
+				app:layout_constraintTop_toBottomOf="@+id/entry_activity_subscription_logo" />
+
+			<TextView
+				android:id="@+id/entry_activity_subscription_description_point_1"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:text="@string/plain_test_first_30_days_for_free"
+				android:textAlignment="center"
+				android:textAppearance="?attr/textAppearanceHeadline6"
+				app:layout_constraintBottom_toTopOf="@+id/entry_activity_subscription_description_point_2"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintTop_toBottomOf="@+id/entry_activity_subscription_title" />
+
+			<TextView
+				android:id="@+id/entry_activity_subscription_description_point_2"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:text="@string/plain_after_that_only"
+				android:textAlignment="center"
+				android:textAppearance="?attr/textAppearanceHeadline6"
+				app:layout_constraintBottom_toTopOf="@+id/entry_activity_subscription_price"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintTop_toBottomOf="@+id/entry_activity_subscription_description_point_1" />
+
+			<TextView
+				android:id="@+id/entry_activity_subscription_price"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:text="@string/plain_6_99_per_30_days"
+				android:textAlignment="center"
+				android:textAppearance="?attr/textAppearanceHeadline6"
+				app:layout_constraintBottom_toTopOf="@+id/entry_activity_subscription_check_out_button"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintTop_toBottomOf="@+id/entry_activity_subscription_description_point_2" />
+
+			<com.google.android.material.button.MaterialButton
+				android:id="@+id/entry_activity_subscription_check_out_button"
+				style="@style/Widget.HappyApp.ContainedButton"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:text="@string/plain_check_out"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintTop_toBottomOf="@+id/entry_activity_subscription_price" />
 
 			<androidx.viewpager2.widget.ViewPager2
 				android:id="@+id/entry_activity_subscription_view_pager"
 				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				app:layout_constraintTop_toBottomOf="@+id/entry_activity_subscription_view_pager_caption" />
+				android:layout_height="wrap_content" />
 
 			<!--<com.google.android.material.button.MaterialButton-->
 			<!--android:id="@+id/entry_activity_registration_button"-->
